--- a/estilo/style.css
+++ b/estilo/style.css
@@ -56,7 +56,7 @@ header > p {
     color: white;
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
-    width: 600px;
+    max-width: 600px;
     margin: auto;
     padding-bottom: 50px;
     padding-left: 10px;
